# ByzantineIson

./: .gitignore  README.md  gradle.properties  import-summary.txt  local.properties
app/: .gitignore  CMakeLists.txt  build.gradle
app/src/androidTest/java/com/coderss/ison/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/SoundSets/: SoundSets.txt
app/src/main/assets/SoundSets/Choir (Female)/: 370.0  415.3  440.0
app/src/main/assets/SoundSets/Choir (Male)/: 261.6  293.7  329.6  349.2  440.0  493.9  list.txt
app/src/main/assets/SoundSets/Original/: 246.9
app/src/main/assets/SoundSets/Sine Wave/: list.txt
app/src/main/cpp/: OpenSLES_Android_API24.h  android_log.h  audio_common.cc  audio_common.h  audio_player.cc  audio_player.h  audio_renderer.h  ison_soundset.cpp  ison_soundset.h  jni_bridge.cc  load_stabilizer.cc  load_stabilizer.h  native-lib.cpp  native-lib.h  synthesizer.cc  synthesizer.h  trace.cc  trace.h
app/src/main/java/com/coderss/ison/: AppSettings.java  DockService.java  IsonActivity.java  LayoutSettings.java  Player.java  Reader.java  Scale.java  ScaleManager.java  Sound.java  SoundSet.java  SoundSetLoader.java
app/src/main/res/drawable/: launch_screen.xml
app/src/main/res/layout/: activity_main.xml  app_settings.xml  scale_manager.xml  sound_loader.xml
app/src/main/res/menu/: main_activity_actions.xml
app/src/main/res/values/: dimens.xml  preferences.xml  strings.xml  styles.xml
app/src/main/res/xml/: preferences.xml
app/src/test/java/com/coderss/ison/: ExampleUnitTest.java
(+6 files in other folders)
